--- a/externo/estilos.css
+++ b/externo/estilos.css
@@ -6,7 +6,7 @@ html {
 header {
     position: sticky !important ; /* Hacemos que la cabecera tenga una posición fija */
 	top: 0 !important; /* Posicionamos la cabecera pegada arriba */	
-    background-color: 6699CC;
+    background-color: #e48200;
 }
 
 .grid-container {
