--- a/externo/estilos.css
+++ b/externo/estilos.css
@@ -23,8 +23,8 @@ header {
 
 footer {
     position:absolute;
-    background-color: 6699CC;
- 
+    background-color: #e48200;
+    
     text-align:center;
     left:0;
     width:100%;
