--- a/externo/estilos.css
+++ b/externo/estilos.css
@@ -1,11 +1,13 @@
 html {
     min-height: 100%;
     position: relative;
-    
+
 }
 header {
-    position: sticky !important ; /* Hacemos que la cabecera tenga una posición fija */
-	top: 0 !important; /* Posicionamos la cabecera pegada arriba */	
+    position: sticky !important;
+    /* Hacemos que la cabecera tenga una posición fija */
+    top: 0 !important;
+    /* Posicionamos la cabecera pegada arriba */
     background-color: #e48200 !important;
 }
 
@@ -22,16 +24,26 @@ header {
 }
 
 footer {
-    position:absolute;
+    position: absolute;
     background-color: #e48200;
-    
-    text-align:center;
-    left:0;
-    width:100%;
+    text-align: center;
+    left: 0;
+    width: 100%;
     bottom: 0;
-  
-    
+
+
 }
-.card{
-    position: static !important;
+.card {
+    position: static !important;  
+}
+
+.card-1 {
+    display: grid;
+    position: static !important;  
+    
+    grid-template-columns: 100px 100px 100px ;
+    grid-gap: 5px;
+    justify-content: space-evenly;
+    align-content: center;
+
 }
