--- a/externo/estilos.css
+++ b/externo/estilos.css
@@ -1,6 +1,7 @@
 html {
     min-height: 100%;
     position: relative;
+    
 
 }
 header {
@@ -35,11 +36,12 @@ footer {
 }
 .card {
     position: static !important;  
+
 }
 
 .card-1 {
     display: grid;
-    position: static !important;  
+    display: flex;
     
     grid-template-columns: 100px 100px 100px ;
     grid-gap: 5px;
