--- a/externo/estilos.css
+++ b/externo/estilos.css
@@ -1,5 +1,6 @@
-html {
+html , body{
     min-height: 100%;
+    display: block;
     
 }
 header {
@@ -9,9 +10,7 @@ header {
     display: block !important;
 }
 
-body{
-    position: absolute !important;   
-}
+
 
 .grid-container {
     display: grid;
@@ -26,16 +25,19 @@ body{
 }
 
 footer {
-    position: sticky !important;
+    position: fixed !important;
     background-color: #e48200;
     text-align: center;
     left: 0;
     width: 100%;
+    height: 100px;
     bottom: 0;
 
 }
-.card {
-    position: static !important;  
+#card {
+    position: static !important;
+    
+
 
 }
 
