--- a/externo/estilos.css
+++ b/externo/estilos.css
@@ -1,22 +1,39 @@
-html , body{
+html {
     min-height: 100%;
-    display: block;
+    display: block !important;
+    width: 100%;
     
 }
-header {
-    position: sticky !important;
-    top: 0 !important;
-    background-color: #e48200 !important;
-    display: block !important;
+body{
+    justify-content:center !important;
+    width: 100%;
+    position: relative;
+    left: 50;
+    right: 50;
+    top: 130;
+    max-width: 400px;
+    background-color: papayawhip; 
+    margin: 0 auto;
 }
+   
 
-
+header {
+    position: fixed!important;
+    background-color: #e48200 !important;
+    display: flex;
+    width: 100%; /* hacemos que la cabecera ocupe el ancho completo de la página */
+	left: 0; /* Posicionamos la cabecera al lado izquierdo */
+	top: 0; /* Posicionamos la cabecera pegada arriba */
+    z-index: 1000;
+   
+}
 
 .grid-container {
     display: grid;
     column-gap: 30px;
     grid-template-columns: auto auto auto;
     padding: 5px;
+    z-index: 1000;
 }
 
 .grid-item {
@@ -30,15 +47,14 @@ footer {
     text-align: center;
     left: 0;
     width: 100%;
-    height: 100px;
+    height: 90px;
     bottom: 0;
+    z-index: 1000;
 
 }
 #card {
     position: static !important;
-    
-
-
+    z-index: 1 !important;
 }
 
 .card-1 {
@@ -48,6 +64,7 @@ footer {
     grid-gap: 5px;
     justify-content: space-evenly;
     align-content: center;
+    z-index: 1;
 
 }
 
