--- a/externo/form.css
+++ b/externo/form.css
@@ -1,70 +1,72 @@
 .signupFrm {
-    display: flex;
-    position: static !important;
-    justify-content: center;
-    align-items: center;
-    
-  }
-  .form {
-    
-    background-color: white;
-    width: 600px;
-    border-radius: 8px;
-    padding: 20px 40px;
-    box-shadow: 0 10px 25px rgba(34, 76, 112, 0.2);
-  }
-  
-  .title {
-    margin-bottom: 10px;
-  }
-  .inputContainer {
-    
-    display: contents;
-    height: 45px;
-    width: 130%;
-    margin-bottom: 27px;
-  }
-  /* Style the inputs */
+  display: block;
+  align-items: center !important;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+
+}
+
+.form {
+  display: block;
+  width: 100%;
+  align-items: center !important;
+ 
+}
+
+.title {
+  margin-bottom: 10px;
+}
+
+.inputContainer {
+  z-index: 10;
+  height: 45px;
+  width: 100%;
+  margin-bottom: 27px;
+}
 
 .input {
-    position: static;
-    display: flex;
-    top: 0px;
-    left: 0px;
-    height: 100%;
-    width: 100%;
-    border: 2px solid #1D2C49;
-    border-radius: 10px;
-    font-size: 16px;
-    padding: 0 60px;
-    outline: none;
-    background: none;
-    z-index: 1;
-  }
-  
-  /* Hide the placeholder texts (a) */
-  
-  ::placeholder {
-    color: transparent;
-  }
-.col-6{
-    position: static !important;
+  position: relative;
+  left: 480;
+  height: 40px;
+  width: 300px !important;
+  border: 2px solid #1D2C49;
+  border-radius: 10px;
+  font-size: 16px;
+  padding: 0 60px;
+  outline: none;
+  background: none;
+  z-index: 1;
+}
 
-  }
-  .label {
-    position: static;
-    top: 15px;
-    left: 15px;
-    padding: 0 4px;
-    background-color: white;
-    color: #1D2C49;
-    font-size: 16px;
-    transition: 0.5s;
-    z-index: 0;
-  }
-  .submitBtn {
+/* Hide the placeholder texts (a) */
+
+::placeholder {
+  color: transparent;
+}
+
+.col-6 {
+  position: static !important;
+
+}
+
+.label {
+  position: relative;
+  top: 15px;
+  left: 15px;
+  padding: 0 4px;
+  background-color: white;
+  color: #1D2C49;
+  font-size: 16px;
+  transition: 0.5s;
+  z-index: 0;
+}
+
+.submitBtn {
+  width: 300px !important;
   display: block;
-  margin-left: auto;
+  position: relative;
+  left: 480;
   padding: 15px 30px;
   border: none;
   background-color: #1D2C49;
@@ -72,40 +74,45 @@
   border-radius: 6px;
   cursor: pointer;
   font-size: 16px;
-  margin-top: 30px;
+  
 }
 
 .submitBtn:hover {
   background-color: #e48200;
   transform: translateY(-2px);
 }
-.input:focus + .label {
-    top: -7px;
-    left: 3px;
-    z-index: 10;
-    font-size: 18px;
-    font-weight: 600;
-    color: #e48200;
-  }
-  .input:focus {
-    border: 2px solid #e48200;
-  }
-  .input:not(:placeholder-shown)+ .label {
-    top: -7px;
-    left: 3px;
-    z-index: 10;
-    font-size: 14px;
-    font-weight: 600;
-  }
-  .form-signin {
-    width: 100%;
-    max-width: 330px;
-    padding: 15px;
-    margin: auto;
-    
+
+.input:focus+.label {
+  top: -7px;
+  left: 3px;
+  z-index: 10;
+  font-size: 18px;
+  font-weight: 600;
+  color: #e48200;
+}
+
+.input:focus {
+  border: 2px solid #e48200;
+}
+
+.input:not(:placeholder-shown)+.label {
+  top: -7px;
+  left: 3px;
+  z-index: 10;
+  font-size: 14px;
+  font-weight: 600;
+}
+
+.form-signin {
+  width: 100%;
+  max-width: 330px;
+  padding: 15px;
+  margin: auto;
+
 
 }
+
 .form-signin .checkbox {
-    font-weight: 400;
+  font-weight: 400;
 
 }
